mais info abre em nova pagina

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </h2>
             <p>
                 Você pode conhecer mais sobre Miyamoto Musashi
-                 <a href="https://pt.wikipedia.org/wiki/Miyamoto_Musashi">clicando aqui.</a>
+                 <a href="https://pt.wikipedia.org/wiki/Miyamoto_Musashi" target="_blank">clicando aqui.</a>
             </p>
         </div>
 
